agents: update plans