@@ -5,7 +5,7 @@ upgrading the repository foundation.
 
 ## Current Baseline
 
-- Root build baseline validated on Temurin **JDK 11.0.26** with **Maven 3.8.5**
+- Root build baseline validated on Temurin **JDK 17.0.18** with **Maven 3.8.5**
 - Root build command used for baseline:
   - `mvn -q clean install -DskipTests`
 - Jooby module test baseline:
@@ -20,19 +20,16 @@ upgrading the repository foundation.
 
 | Area | Current state |
 |---|---|
-| JDK target | Repository baseline is still JDK 11 |
-| Guice | `com.google.inject:guice` is `5.1.0` via `killbill-oss-parent` |
-| Guice servlet bridge | `com.google.inject.extensions:guice-servlet` is still on the current parent-managed line |
+| JDK target | Repository baseline is now JDK 17 via root `project.build.targetJdk` override |
+| Guice | `com.google.inject:guice` is now pinned to `6.0.0` via root dependency management override |
+| Guice servlet bridge | `com.google.inject.extensions:guice-servlet` is now pinned to `6.0.0` via root dependency management override |
 | Inject namespace | Source still uses `javax.inject`; `javax.inject:javax.inject` is explicitly declared in the Jooby fork |
 | Servlet namespace | `jakarta.servlet:jakarta.servlet-api:4.0.4` is used as a transitional artifact and still exposes `javax.servlet` packages |
 | Jetty | Jetty already sits on `10.0.16` in the fork |
 
 ## Phase 2 Sequence
 
-1. Upgrade the build baseline to JDK 17 without changing `javax.*` source imports
-2. Re-establish a green build/test baseline on JDK 17
-3. Upgrade Guice and guice-servlet to 6.0.0
-4. Re-establish a green build/test baseline before starting any Jakarta namespace migration
+Phase 2 foundation work is complete. The next step is Phase 3 Jakarta namespace migration.
 
 ## Notes
 
@@ -41,3 +38,9 @@ upgrading the repository foundation.
 - The Jooby module is a useful canary for Phase 2 because it already exercises Guice, servlet, Jetty,
   and a large migrated Mockito-based test tree.
 - The old `-Pjooby` test gate was removed after the active test tree was fully restored.
+- JDK 17 does not need to be the machine default, but Phase 2 validation must run Maven in a shell
+  that has JDK 17 selected explicitly when multiple JDKs are installed.
+- Root `surefireArgLine` now overrides the parent's JDK 17 profile so test JVMs no longer use
+  `--illegal-access=permit` or the invalid `--add-opens java.base/java.base=ALL-UNNAMED` flag.
+- Full reactor tests, plus focused `jooby`, `skeleton`, `metrics`, and `queue` test runs, passed
+  with JDK 17 + Guice 6.0.0.
